was added Hobbies section, images and styles

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="projects__container">
             <div class="project" id="codi">
                 <div class="description">
-                    <h2>CODI - Ecopetrol</h2>
+                    <h3>CODI - Ecopetrol</h3>
                     <p>
                         This web app was created to ecopetrol to realize a digital courier to people outside of company
                     </p>
@@ -249,7 +249,7 @@
             </div>
             <div class="project" id="shoppingcar">
                 <div class="description">
-                    <h2>Shopping car - Ci2</h2>
+                    <h3>Shopping car - Ci2</h3>
                     <p>
                         This web app was created to admission test to Ci2 company, but I worked with its partner.
                     </p>
@@ -261,7 +261,7 @@
             </div>
             <div class="project" id="catstagram">
                 <div class="description">
-                    <h2>Catstagram</h2>
+                    <h3>Catstagram</h3>
                     <p>
                         I learn JS and React.js with this project. I used API cat to search images, breed and categories.
                     </p>
@@ -269,6 +269,46 @@
                         <a href="#" class="btn btn-primary">See code</a>
                         <a href="#" class="btn btn-secondary">See app</a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="hobbies">
+        <h2 class="section__title">Hobbies</h2>
+        <p class="section__description">
+            I want to share you my hobbies, my likes and sport that I enjoy 
+        </p>
+        <div class="hobbies__container">
+            <div class="hobby">
+                <div class="hobby__description">
+                    <h3>Learn</h3>
+                </div>
+                <div class="hobby__image">
+                    <img src="./img/hobby-learn.png" alt="">
+                </div>
+            </div>
+            <div class="hobby">
+                <div class="hobby__description">
+                    <h3>Photografy</h3>
+                </div>
+                <div class="hobby__image">
+                    <img src="./img/hobby-photografy.png" alt="">
+                </div>
+            </div>
+            <div class="hobby">
+                <div class="hobby__description">
+                    <h3>Listening to music</h3>
+                </div>
+                <div class="hobby__image">
+                    <img src="./img/hobby-music.png" alt="">
+                </div>
+            </div>
+            <div class="hobby">
+                <div class="hobby__description">
+                    <h3>See car races</h3>
+                </div>
+                <div class="hobby__image">
+                    <img src="./img/hobby-f1.png" alt="">
                 </div>
             </div>
         </div>
