was added inspiration section, images and styles

--- a/index.html
+++ b/index.html
@@ -313,6 +313,62 @@
             </div>
         </div>
     </section>
+    <section id="inspirations">
+        <h2 class="section__title">Inspirations</h2>
+        <p class="section__description">
+            Everything I think or have in my mind, is influenced by incredible people, Their dreams come true, they give me the power to never give up and keep pushing.
+        </p>
+        <div class="inspirations__container">
+            <div class="inspiration__item">
+                <figure class="inspiration__image">
+                    <img src="./img/pamela-valdes.png" alt="Pamela Valdés">
+                </figure>
+                <div class="inspiration__content">
+                    <p>Pamela Valdés</p>
+                    <h5>CEO & Cofounder of Beek</h5>
+                    <blockquote cite="https://beek.io">
+                        “If you are not willing to lose everything, you are not willing to win it”
+                    </blockquote>
+                </div>
+            </div>
+            <div class="inspiration__item inspiration__item--right">
+                <figure class="inspiration__image">
+                    <img src="./img/freddy-vega.png" alt="Freddy Vega">
+                </figure>
+                <div class="inspiration__content">
+                    <p>Freddy Vega</p>
+                    <h5>CEO & Cofounder of platzi</h5>
+                    <blockquote cite="https://beek.io">
+                        “People want the fast trick, the two seconds hack that should you repeat”
+                    </blockquote>
+                </div>
+            </div>
+            <div class="inspiration__item">
+                <figure class="inspiration__image">
+                    <img src="./img/robbie.png" alt="Robbie J. Frie">
+                </figure>
+                <div class="inspiration__content">
+                    <p>Robbie J. Frye</p>
+                    <h5>Host of The Frye Show podcast</h5>
+                    <blockquote cite="https://beek.io">
+                        “You can earn more money, not more time”
+                    </blockquote>
+                </div>
+            </div>
+            <div class="inspiration__item inspiration__item--right">
+                <figure class="inspiration__image">
+                    <img src="./img/tatiana-calderon.png" alt="Robbie J. Frie">
+                </figure>
+                <div class="inspiration__content">
+                    <p>Tatiana Calderón</p>
+                    <h5>Super Formula & WEC LMP2 driver</h5>
+                    <blockquote cite="https://beek.io">
+                        “You can earn more money, not more time”
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <div class="footer__content">
             <div class="footer__copyrigth">
