was added footer section, icons, curriculum and styles

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </a>
             </div>
             <div class="hero-curriculum">
-                <a target="_blank" href="./assets/MyPortfolio.pdf" class="btn btn-primary" rel="noopener noreferrer">
+                <a target="_blank" href="./assets/Joe Harry Mancera - Web Developer.pdf" class="btn btn-primary" rel="noopener noreferrer">
                     <img src="./img/Document-logo.svg" alt=""/>
                     Download curriculum
                 </a>
@@ -338,7 +338,7 @@
                 <div class="inspiration__content">
                     <p>Freddy Vega</p>
                     <h5>CEO & Cofounder of platzi</h5>
-                    <blockquote cite="https://beek.io">
+                    <blockquote cite="https://www.platzi.com">
                         “People want the fast trick, the two seconds hack that should you repeat”
                     </blockquote>
                 </div>
@@ -350,19 +350,19 @@
                 <div class="inspiration__content">
                     <p>Robbie J. Frye</p>
                     <h5>Host of The Frye Show podcast</h5>
-                    <blockquote cite="https://beek.io">
+                    <blockquote cite="https://thefryeshow.com">
                         “You can earn more money, not more time”
                     </blockquote>
                 </div>
             </div>
             <div class="inspiration__item inspiration__item--right">
                 <figure class="inspiration__image">
-                    <img src="./img/tatiana-calderon.png" alt="Robbie J. Frie">
+                    <img src="./img/tatiana-calderon.png" alt="Tatiana Calderón">
                 </figure>
                 <div class="inspiration__content">
                     <p>Tatiana Calderón</p>
                     <h5>Super Formula & WEC LMP2 driver</h5>
-                    <blockquote cite="https://beek.io">
+                    <blockquote cite="https://www.tatianacalderon.com">
                         “You can earn more money, not more time”
                     </blockquote>
                 </div>
@@ -371,8 +371,41 @@
     </section>
     <footer class="footer">
         <div class="footer__content">
+            <div class="footer__contact">
+                <a target="_blank" href="./assets/Joe Harry Mancera - Web Developer.pdf" class="btn btn-primary" rel="noopener noreferrer">
+                    <img src="./img/Document-logo.svg" alt=""/>
+                    Download curriculum
+                </a>
+                <div class="footer__social">
+                    <a target="_blank" title="Go to Joe's GitHub" href="https://github.com/JoeMancera" alt="Go to Joe's GitHub" rel="noopener noreferrer">
+                        <img src="./img/GitHub-logo.svg" alt="GitHub" srcset="">
+                        GitHub
+                    </a>
+                    <a target="_blank" title="Go to Joe's linkedIn" href="https://www.linkedin.com/in/joemancera/" alt="Go to Joe's linkedIn" rel="noopener noreferrer">
+                        <img src="./img/Linkedin-logo.svg" alt="LinkedIn" srcset="">
+                        LinkedIn
+                    </a>
+                    <a target="_blank" title="Go to Joe's Twitter" href="https://twitter.com/JoeHarrym" alt="Go to Joe's Twitter" rel="noopener noreferrer">
+                        <img src="./img/Twitter-logo.svg" alt="Twitter" srcset="">
+                        Twitter
+                    </a>
+
+                    <a target="_blank" title="Go to Joe's GitHub" href="https://github.com/JoeMancera" alt="Go to Joe's GitHub" rel="noopener noreferrer">
+                        <img src="./img/CodePen.svg" alt="GitHub" srcset="">
+                        CodePen
+                    </a>
+                    <a target="_blank" title="Go to Joe's linkedIn" href="https://www.linkedin.com/in/joemancera/" alt="Go to Joe's linkedIn" rel="noopener noreferrer">
+                        <img src="./img/500px.svg" alt="LinkedIn" srcset="">
+                        500px
+                    </a>
+                    <a target="_blank" title="Go to Joe's Twitter" href="https://twitter.com/JoeHarrym" alt="Go to Joe's Twitter" rel="noopener noreferrer">
+                        <img src="./img/codesambox.svg" alt="Twitter" srcset="">
+                        CodeSambox
+                    </a>
+                </div>
+            </div>
             <div class="footer__copyrigth">
-                <p>Made with 🤍 by Joe</p>
+                <p>Made with 🧡 by Joe</p>
                 <p>Copyright 2021 all rights reserved</p>
             </div>
         </div>
