Was updated media-queries stiles for tablets, except skills section

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div>
             <div class="hobby">
                 <div class="hobby__description">
-                    <h3>Listening to music</h3>
+                    <h3>Listen to music</h3>
                 </div>
                 <div class="hobby__image">
                     <img src="./img/hobby-music.png" alt="">
