was fixed skills background for desktop devices

--- a/index.html
+++ b/index.html
@@ -121,12 +121,14 @@
             </div>
         </div>
     </section>
-    <section id="skills" class="container">
+    <section id="skills" class="container" >
         <h2 class="section__title">Skills</h2>
         <p class="section__description">
             I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
         </p>
-        <div class="skills">
+        <div class="skill__background"></div>
+        <div class="skills__container">
+            <div class="skill__dot"></div>
             <details id="html" class="skills__item" open>
                 <summary>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
