Was updated description and readme too.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section id="about-me" class="container">
         <h2 class="section__title">About me</h2>
         <p class="section__description">
-            My name is Joe Mancera. I’m from Colombia and I have experience in different roles with backend and frontend dev. I have worked in high-performance teams, to develop the best tools to resolve problems.
+            My name is Joe Mancera. I’m from Colombia and I have experience in different roles with backend and frontend dev. I'm a passionate learner and I'm always looking for new challenges and opportunities to grow my skills. I have worked on high-performance teams, developing the best tools and technologies to solve problems.
         </p>
         <div class="console__parallax">
             <div class="console">
