Was update projects link

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                         This web app was created to ecopetrol to realize a digital courier to people outside of company
                     </p>
                     <div class="button__group">
-                        <a href="#" class="btn btn-primary">See code</a>
-                        <a href="#" class="btn btn-secondary">See app</a>
+                        <a target="_blank" rel="noopener noreferrer" href="#" class="btn btn-primary">See arch.</a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://sedeelectronica.ecopetrol.com.co/" class="btn btn-secondary">See app</a>
                     </div>
                 </div>
             </div>
@@ -247,8 +247,8 @@
                         This web app was created to admission test to Ci2 company, but I worked with its partner.
                     </p>
                     <div class="button__group">
-                        <a href="#" class="btn btn-primary">See code</a>
-                        <a href="#" class="btn btn-secondary">See app</a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://github.com/JoeMancera/shoppingcar" class="btn btn-primary">See code</a>
+                        <a target="_blank" rel="noopener noreferrer" href="http://shoppingwebcar.apphb.com" class="btn btn-secondary">See app</a>
                     </div>
                 </div>
             </div>
@@ -259,8 +259,8 @@
                         I learn JS and React.js with this project. I used API cat to search images, breed and categories.
                     </p>
                     <div class="button__group">
-                        <a href="#" class="btn btn-primary">See code</a>
-                        <a href="#" class="btn btn-secondary">See app</a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://github.com/JoeMancera/catstagram" class="btn btn-primary">See code</a>
+                        <a target="_blank" rel="noopener noreferrer" href="https://nostalgic-elion-5c361e.netlify.app/" class="btn btn-secondary">See app</a>
                     </div>
                 </div>
             </div>
