Was update social links, inspiration's descriptions and added item on inspiration section

--- a/index.html
+++ b/index.html
@@ -355,8 +355,20 @@
                 <div class="inspiration__content">
                     <p>Tatiana Calderón</p>
                     <h5>Super Formula & WEC LMP2 driver</h5>
-                    <blockquote cite="https://www.tatianacalderon.com">
-                        “You can earn more money, not more time”
+                    <blockquote cite="https://www.femalesinmotorsport.com/post/tatiana-calder%C3%B3n-we-re-there-to-compete-against-the-best">
+                        “The only person who can determine what your limits are is you”
+                    </blockquote>
+                </div>
+            </div>
+            <div class="inspiration__item">
+                <figure class="inspiration__image">
+                    <img src="./img/lewis-hamilton-turkey.png" alt="Lewis Hamilton on Turkey">
+                </figure>
+                <div class="inspiration__content">
+                    <p>Lewis Hamilton</p>
+                    <h5>F1 World champion</h5>
+                    <blockquote cite="https://twitter.com/LewisHamilton/status/1459981881383038980">
+                        “You can do anything you put your mind to!”
                     </blockquote>
                 </div>
             </div>
@@ -383,16 +395,16 @@
                         Twitter
                     </a>
 
-                    <a target="_blank" title="Go to Joe's GitHub" href="https://github.com/JoeMancera" alt="Go to Joe's GitHub" rel="noopener noreferrer">
-                        <img src="./img/CodePen.svg" alt="GitHub" srcset="">
+                    <a target="_blank" title="Go to Joe's CodePen" href="https://codepen.io/JoeMancera/pens/popular" alt="Go to Joe's CodePen" rel="noopener noreferrer">
+                        <img src="./img/CodePen.svg" alt="CodePen" srcset="">
                         CodePen
                     </a>
-                    <a target="_blank" title="Go to Joe's linkedIn" href="https://www.linkedin.com/in/joemancera/" alt="Go to Joe's linkedIn" rel="noopener noreferrer">
-                        <img src="./img/500px.svg" alt="LinkedIn" srcset="">
+                    <a target="_blank" title="Go to Joe's 500px" href="https://500px.com/p/joeharrym?view=photos" alt="Go to Joe's 500px" rel="noopener noreferrer">
+                        <img src="./img/500px.svg" alt="500px" srcset="">
                         500px
                     </a>
-                    <a target="_blank" title="Go to Joe's Twitter" href="https://twitter.com/JoeHarrym" alt="Go to Joe's Twitter" rel="noopener noreferrer">
-                        <img src="./img/codesambox.svg" alt="Twitter" srcset="">
+                    <a target="_blank" title="Go to Joe's CodeSandbox" href="https://codesandbox.io/u/JoeMancera" alt="Go to Joe's CodeSandbox" rel="noopener noreferrer">
+                        <img src="./img/codesambox.svg" alt="CodeSandbox" srcset="">
                         CodeSambox
                     </a>
                 </div>
