Was update curriculum file and CODI architecture diagram

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         This web app was created to ecopetrol to realize a digital courier to people outside of company
                     </p>
                     <div class="button__group">
-                        <a target="_blank" rel="noopener noreferrer" href="#" class="btn btn-primary">See arch.</a>
+                        <a target="_blank" rel="noopener noreferrer" href="./assets/Arch CODI.png" class="btn btn-primary">See arch.</a>
                         <a target="_blank" rel="noopener noreferrer" href="https://sedeelectronica.ecopetrol.com.co/" class="btn btn-secondary">See app</a>
                     </div>
                 </div>
