was updated some things about accessibility, descriptions of skills and issues performace

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@200;300;400;500;700&display=swap" rel="stylesheet">
     <title>Joe Mancera | Web Developer 🚀</title>
 </head>
 <body>
@@ -137,7 +137,7 @@
                     <span>HTML, CSS & JS</span>
                 </summary>
                 <p>
-                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                    With HTML5, CSS3 and JavaScript I can create responsive and interactive websites.
                 </p>
             </details>
             <details id="react" class="skills__item">
@@ -148,7 +148,7 @@
                     <span>React.js</span>
                 </summary>
                 <p>
-                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                    I have been able to create applications that allows users interaction with API's and a database.
                 </p>
             </details>
             <details id="git" class="skills__item">
@@ -159,7 +159,7 @@
                     <span>Git/GitHub</span> 
                 </summary>
                 <p>
-                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                    Git helps me to manage my projects and I have been able to work with this on team projects.
                 </p>
             </details>
             <details id="jest" class="skills__item">
@@ -170,7 +170,7 @@
                     <span>Jest</span> 
                 </summary>
                 <p>
-                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                    I do testings with Jest and I have been able to write tests for components, functions and services.
                 </p>
             </details>
             <details id="webpack" class="skills__item">
@@ -184,7 +184,7 @@
                     <span>WebPack</span> 
                 </summary>
                 <p>
-                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                    WebPack help me to create a bundle of my code, so I can use it in my application.
                 </p>
             </details>
             <details id="accessibility" class="skills__item">
@@ -195,7 +195,7 @@
                     <span>Accessibility</span> 
                 </summary>
                 <p>
-                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                    Accessibility is so important for me, I want to make sure that my website is accessible for everyone.
                 </p>
             </details>
             <details id="command" class="skills__item">
@@ -206,7 +206,7 @@
                     <span>Command line</span> 
                 </summary>
                 <p>
-                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                    Command line is a tool that I use to run my code, do something configuration, install packages and more.
                 </p>
             </details>
             <details id="figma" class="skills__item">
@@ -217,7 +217,7 @@
                     <span>Figma</span> 
                 </summary>
                 <p>
-                    I have some skills that can provide a lot of value to develope, near backend and frontend teams, high quality products.
+                    I need to see my design in real time, so I use Figma to create my design, ideas and others documents.
                 </p>
             </details>
         </div>
