Se actualiza el CV y se agrega hoja en inglés

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </a>
             </div>
             <div class="hero-curriculum">
-                <a target="_blank" href="./assets/Joe Harry Mancera - Web Developer.pdf" class="btn btn-primary" rel="noopener noreferrer">
+                <a target="_blank" href="./assets/Joe Harry Mancera - Web Developer -EN-ES.pdf" class="btn btn-primary" rel="noopener noreferrer">
                     <img src="./img/Document-logo.svg" alt=""/>
                     Download curriculum
                 </a>
@@ -377,7 +377,7 @@
     <footer class="footer">
         <div class="footer__content">
             <div class="footer__contact">
-                <a target="_blank" href="./assets/Joe Harry Mancera - Web Developer.pdf" class="btn btn-primary" rel="noopener noreferrer">
+                <a target="_blank" href="./assets/Joe Harry Mancera - Web Developer -EN-ES.pdf" class="btn btn-primary" rel="noopener noreferrer">
                     <img src="./img/Document-logo.svg" alt=""/>
                     Download curriculum
                 </a>
