--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <div class="description">
                     <h3>Catstagram</h3>
                     <p>
-                        I learn JS and React.js with this project. I used API cat to search images, breed and categories.
+                        I learned JS and React.js with this project. I used the API cat to search images, breed and categories.
                     </p>
                     <div class="button__group">
                         <a target="_blank" rel="noopener noreferrer" href="https://github.com/JoeMancera/catstagram" class="btn btn-primary">See code</a>
@@ -282,7 +282,7 @@
             </div>
             <div class="hobby">
                 <div class="hobby__description">
-                    <h3>Photografy</h3>
+                    <h3>Photography</h3>
                 </div>
                 <div class="hobby__image">
                     <img src="./img/hobby-photografy.png" alt="">
@@ -314,6 +314,18 @@
         <div class="inspirations__container">
             <div class="inspiration__item">
                 <figure class="inspiration__image">
+                    <img src="./img/mududev.jpg" alt="Miguel Ángel Durán">
+                </figure>
+                <div class="inspiration__content">
+                    <p>Miguel Ángel Durán</p>
+                    <h5>The best streamer dev ever</h5>
+                    <blockquote cite="https://midu.dev/">
+                        “DO NOT compare yourself to anyone. You have just started and you have many things ahead of you to learn and assimilate”
+                    </blockquote>
+                </div>
+            </div>
+            <div class="inspiration__item inspiration__item--right">
+                <figure class="inspiration__image">
                     <img src="./img/pamela-valdes.png" alt="Pamela Valdés">
                 </figure>
                 <div class="inspiration__content">
@@ -324,7 +336,7 @@
                     </blockquote>
                 </div>
             </div>
-            <div class="inspiration__item inspiration__item--right">
+            <div class="inspiration__item">
                 <figure class="inspiration__image">
                     <img src="./img/freddy-vega.png" alt="Freddy Vega">
                 </figure>
@@ -336,7 +348,7 @@
                     </blockquote>
                 </div>
             </div>
-            <div class="inspiration__item">
+            <div class="inspiration__item inspiration__item--right">
                 <figure class="inspiration__image">
                     <img src="./img/robbie.png" alt="Robbie J. Frie">
                 </figure>
@@ -348,7 +360,7 @@
                     </blockquote>
                 </div>
             </div>
-            <div class="inspiration__item inspiration__item--right">
+            <div class="inspiration__item">
                 <figure class="inspiration__image">
                     <img src="./img/tatiana-calderon.png" alt="Tatiana Calderón">
                 </figure>
@@ -360,7 +372,7 @@
                     </blockquote>
                 </div>
             </div>
-            <div class="inspiration__item">
+            <div class="inspiration__item inspiration__item--right">
                 <figure class="inspiration__image">
                     <img src="./img/lewis-hamilton-turkey.png" alt="Lewis Hamilton on Turkey">
                 </figure>
