chore: improve inspiration section

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 </figure>
                 <div class="inspiration__content">
                     <p>Miguel Ángel Durán</p>
-                    <h5>The best streamer dev ever</h5>
+                    <h5>Twitch Streamer Dev</h5>
                     <blockquote cite="https://midu.dev/">
                         “Don't compare yourself... You have just started, and you have many things ahead of you to learn
                         and assimilate”
@@ -428,18 +428,6 @@
                     <h5>CEO & Cofounder of Beek</h5>
                     <blockquote cite="https://beek.io">
                         “If you are not willing to lose everything, you are not willing to win it”
-                    </blockquote>
-                </div>
-            </div>
-            <div class="inspiration__item">
-                <figure class="inspiration__image">
-                    <img src="./img/freddy-vega.png" alt="Freddy Vega" loading="lazy">
-                </figure>
-                <div class="inspiration__content">
-                    <p>Freddy Vega</p>
-                    <h5>CEO & Cofounder of platzi</h5>
-                    <blockquote cite="https://www.platzi.com">
-                        “People want the fast trick, the two seconds hack that should you repeat”
                     </blockquote>
                 </div>
             </div>
